--- a/booking/templates/booking/confirmation.html
+++ b/booking/templates/booking/confirmation.html
@@ -1,10 +1,6 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Booking Confirmed</title>
-</head>
-<body>
+{% extends "booking/layout.html" %}
+
+{% block content %}
     <h1>Thank you!</h1>
     <p>Your booking has been submitted. We’ll be in touch shortly.</p>
-</body>
-</html>
+{% endblock %}
