--- a/booking/templates/booking/success.html
+++ b/booking/templates/booking/success.html
@@ -1,2 +1,6 @@
-<h1>Payment Successful 🎉</h1>
-<p>Thank you for your booking! We’ll contact you soon.</p>
+{% extends "booking/layout.html" %}
+
+{% block content %}
+    <h1>Payment Successful 🎉</h1>
+    <p>Thank you for your booking! We’ll contact you soon.</p>
+{% endblock %}
