--- a/booking/templates/booking/cancel.html
+++ b/booking/templates/booking/cancel.html
@@ -1,2 +1,6 @@
-<h1>Payment Cancelled ❌</h1>
-<p>Your booking has not been completed. Please try again.</p>
+{% extends "booking/layout.html" %}
+
+{% block content %}
+    <h1>Payment Cancelled ❌</h1>
+    <p>Your booking has not been completed. Please try again.</p>
+{% endblock %}
