--- a/booking/templates/owner/layout.html
+++ b/booking/templates/owner/layout.html
@@ -7,6 +7,8 @@
     <title>Owner Dashboard | Navona Romantica</title>
     <link rel="stylesheet" href="{% static 'styles.css' %}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    {% block base_styles %}{% endblock %}
+    {% block extra_styles %}{% endblock %}
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark px-4">
@@ -45,6 +47,7 @@
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-    {% block scripts %}{% endblock %}
+    {% block base_scripts %}{% endblock %}
+    {% block extra_scripts %}{% endblock %}
 </body>
 </html>
